Fix alignment of profile header

--- a/src/app/profile/summary/profile-summary.scss
+++ b/src/app/profile/summary/profile-summary.scss
@@ -21,6 +21,7 @@ noosfero-profile-summary {
       }
     }
     .media-body {
+      text-align: left;
       .media-heading {
         color: #fff;
       }
